Taxon form: make reference items larger and avoid scrollbars

--- a/app/assets/stylesheets/controllers/_taxa.sass
+++ b/app/assets/stylesheets/controllers/_taxa.sass
@@ -141,14 +141,11 @@
           .display
             padding: 6px
             padding-left: 10px
-            max-height: 80px
             overflow: auto
             &.ui-selecting
               background: $color_current_being_edited_background
             .title_taxt, .subtitle_taxt
               font-weight: bold
-    .reference_section + .reference_section
-      margin-top: 6px
 
     .children_section
       .section_contents
